Tweaks/fixes for tables and whitespace

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,10 +14,13 @@
   font-size: 16px;
 }
 .metric-icon {
-  margin: 5px 5px 5px 0;
+  margin: 0 5px 0 0;
 }
 .metric-title {
   text-align: center;
+}
+.highlight-description {
+  margin-bottom: 0;
 }
 .highlight-title {
   vertical-align: middle;
@@ -59,10 +62,7 @@
   line-height: 18px;
 }
 .highlight-metric {
-  .highlight-number,
-  .highlight-label {
-    font-weight: bold;
-  }
+  font-weight: bold;
 }
 .increase {
   color: #39b54a;
