--- a/src/sass/ink.scss
+++ b/src/sass/ink.scss
@@ -122,7 +122,7 @@ table.column {
 
 table.columns td,
 table.column td {
-  padding: 0px 0px 10px; 
+  padding-bottom: 0; 
 }
 
 table.columns td.sub-columns,
